packaged the application ready for testing